# Proyecto_1

./: .gitignore  hola  readme.md
cliente/: Cargo.toml  build.rs
cliente/qml/: main.qml
cliente/settings/: cliente.ini
cliente/src/: cxxqt_object.rs  main.rs
cliente/ui/: appwindow.slint
server/: CMakeLists.txt  Prubeaclion.md  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testSMFL.cpp
server/Paginacion/: ILista.h  ListaPaginada.cpp  ListaPaginada.h
server/estructuras_datos/: Cancion.cpp  DoublyLinkedList.cpp  LinkedList.cpp  Node.cpp  PriorityQueue.cpp  PriorityQueue.h  cancion.h  cancion_object.h  doubly_linked_list.h  linked_list.h  node.h
server/headers/: inicializador.h
server/settings/: server.ini
server/tags/: tags.cpp
server/tcp/: tcpserver.cpp  tcpserver.h
tags/: CMakeLists.txt  main.cpp
