[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.117"
cxx-qt = "0.6.0"
cxx-qt-lib = "0.6.0"
rust-ini = "0.20.0"
json= "0.12.4"
cxx-qt-lib-headers = "0.6.0"

[build-dependencies]
cxx-qt-build = "0.6.0"

